# ClassicChess

./: .gitignore  CMakeLists.txt  README.md  chessboard.cpp  chessboard.h  chessmove.cpp  chessmove.h  chesspiece.cpp  chesspiece.h  gamecontroller.cpp  gamecontroller.h  main.cpp  position.h
UI/: GameController.qml  Main.qml
UI/GameBoard/: GameBoard.qml  GameOverScreen.qml
UI/MainMenu/: MainMenu.qml
